--- a/wiki/Installation.wiki
+++ b/wiki/Installation.wiki
@@ -1,6 +1,10 @@
 #summary How to use Android ROME Feed Reader
 #labels Featured,Phase-Deploy
 
+= JDOM = 
+
+This project requires a forked version of JDOM that is available from [http://code.google.com/p/android-rome-feed-reader/downloads/detail?name=jdom-1.1.1-android-fork.jar&can=2&q= downloads].
+
 = Maven =
 
 Add the Maven repository hosted on Google Code to your project's pom.xml:
@@ -21,10 +25,10 @@ Then add this dependency to your project's pom.xml:
 <dependency>
   <groupId>com.google.code.android-rome-feed-reader</groupId>
   <artifactId>android-rome-feed-reader</artifactId>
-  <version>1.0.0</version>
+  <version>1.0.0-r2</version>
 </dependency>
 }}}
 
 = Ant =
 
-Manually download the feed reader jar from the [http://code.google.com/p/android-rome-feed-reader/downloads/list download page]. You will also need to download [http://www.jdom.org/ JDOM 1.0]. Add these to your project's libraries and you're good to go.
+Manually download the feed reader jar from the [http://code.google.com/p/android-rome-feed-reader/downloads/list download page]. You will also need to download JDOM 1.1.1-android-forked from the download page.
